[gd_scene load_steps=3 format=3 uid="uid://64fwtqkdlbyv"]

[ext_resource type="Script" path="res://LegendarySelect.gd" id="1_51foc"]
[ext_resource type="Texture2D" uid="uid://dy4g3wpl3rv6h" path="res://art/PotionSprites/Potions0001.png" id="2_2cfj5"]

[node name="LegendarySelect" type="CanvasLayer"]
script = ExtResource("1_51foc")

[node name="Option1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -69.0
offset_right = -258.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_2cfj5")

[node name="Option2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -69.0
offset_right = 42.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_2cfj5")

[node name="Option3" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 258.0
offset_top = -69.0
offset_right = 342.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_2cfj5")

[connection signal="pressed" from="Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_option_3_pressed"]
